Updated many functions to better adhear to WordPress style

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: THEME NAME
 Theme URI: http://www.nathansh.com
-Theme Domain: themeSlug
+Text Domain: pp-theme
 Description: Custom theme created for CLIENT NAME
 Version: 1.0
 Author: Nathan Shubert-Harbison
